--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <html>
 <head>
-<title>358 Tagged Open Ruby Bugs as of 2022-05-26 04:37:14 +0900</title>
+<title>358 Tagged Open Ruby Bugs as of 2022-05-28 07:03:39 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="win" />
-<input type="submit" value="os/arch" />
 <input type="submit" value="patch" />
+<input type="submit" value="os/arch" />
 <input type="submit" value="build" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="ractor" />
 <input type="submit" value="ext" />
-<input type="submit" value="notbug" />
 <input type="submit" value="test" />
 <input type="submit" value="lib" />
+<input type="submit" value="notbug" />
 <input type="submit" value="encoding" />
 <input type="submit" value="thread" />
 <input type="submit" value="cygwin" />
@@ -35,7 +35,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">358</span> matched)
 <table>
-<caption>358 Tagged Open Ruby Bugs as of 2022-05-26 04:37:14 +0900</caption>
+<caption>358 Tagged Open Ruby Bugs as of 2022-05-28 07:03:39 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -44,6 +44,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build os/arch ">
+<td><a href="https://bugs.ruby-lang.org/issues/18808">18808</a>
+</td>
+<td>build os/arch</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18808">Cannot compile ruby 3.1.2 on powerpc64le-linux without disabling the jit features</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18806">18806</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18806">protected methods defined by refinements can&#39;t be called</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18805">18805</a>
 </td>
@@ -98,13 +112,6 @@
 </td>
 <td>win</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18794">Windows ucrt - intermittent SEGV TestObjSpace#test_reachable_objects_during_iteration</a>
-</td>
-</tr>
-<tr class=" notbug core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18793">18793</a>
-</td>
-<td>notbug core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18793">Select and Find behave differently for hashes</a>
 </td>
 </tr>
 <tr class=" build ext ">
@@ -163,45 +170,45 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18780">Incorrect binding receiver for C API rb_eval_string()</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18771">18771</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18771">IO.foreach/.readlines ignores the 4th positional argument</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch core ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/18770">18770</a>
 </td>
-<td>ext</td>
+<td>patch core ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18770">Inconsistent behavior of IO/StringIO&#39;s each methods when called with nil as a separator, limit and chomp: true</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/18769">18769</a>
 </td>
-<td>ext</td>
+<td>patch ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18769">StringIO#each hangs up on some input with `chomp: true`</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" patch core ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/18768">18768</a>
 </td>
-<td>ext</td>
+<td>patch core ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18768">Inconsistent behavior of IO, StringIO and String each_line methods when return paragraph and chomp: true passed</a>
 </td>
 </tr>
-<tr class=" core ">
+<tr class=" patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18767">18767</a>
 </td>
-<td>core</td>
+<td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18767">IO.foreach hangs up when passes limit=0</a>
 </td>
 </tr>
-<tr class=" doc ">
+<tr class=" patch doc ">
 <td><a href="https://bugs.ruby-lang.org/issues/18765">18765</a>
 </td>
-<td>doc</td>
+<td>patch doc</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18765">Wrong description introduced by https://github.com/ruby/ruby/pull/4938/files</a>
 </td>
 </tr>
@@ -490,13 +497,6 @@
 </td>
 <td>notbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18567">Depending on default gems in stdlib gems when not needed considered harmful</a>
-</td>
-</tr>
-<tr class=" notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/18560">18560</a>
-</td>
-<td>notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18560">&quot;Compaction isn&#39;t available on this platform&quot; error running PG test suite on ppc64le</a>
 </td>
 </tr>
 <tr class=" core ">
